--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do Site </h1>
+            <h1>Curso Gratis </h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>texto Artigo 001</p>
+            <h2>Curso HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, aut odit mollitia itaque nemo at eos nihil laudantium eaque sapiente enim atque exercitationem. Nulla optio doloribus, eligendi ea similique perferendis!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam modi cum voluptas quaerat? Hic sapiente, totam, deleniti, reiciendis esse similique error modi non magni animi odit culpa consectetur corrupti voluptate?</p>
         </article>
     </main>
 </body>
